<resources>
    <string name="app_name">QuilTerrier</string>
    <string name="nombre">quilTerrier app</string>
    <string name="login">LOGIN</string>
    <string name="creracuenta">REGISTRARSE</string>
    <string name="loginactivityusuario">E-MAIL</string>
    <string name="loginactivityusuarioedittext">CORREO</string>
    <string name="loginactivitypassword">Ingrese su contraseña</string>
    <string name="loginactivitypasswordedittext">CONTRASEÑA</string>
    <string name="loginactivitybtniniciarsesion">INICIAR SESION</string>
    <string name="crearcuentaactivitycorreo">E-mail</string>
    <string name="crearcuentaactivitycorreoedittext">Ingrese su E-mail</string>
    <string name="crearcuentaactivitypassword2">REPITA SU CONTRASEÑA</string>
    <string name="crearcuentaactivitybtnregistarse">REGISTRARSE</string>
    <string name="btnregresar">REGRESAR</string>
    <string name="cerrarsesion">CERRAR SESION</string>
    <string name="restablecercontraseña">Restablecer contraseña</string>
    <string name="mensajecontraseña">¿Olvidaste tu contraseña?</string>
    <string name="restablecerpassword">Restablecer contraseña</string>
    <string name="btnrestablecerpassword">Restablecer</string>

    <string-array name="nombre_perro">
        <item>Jhon</item>
        <item>Geralt</item>
        <item>Goku</item>
        <item>Ruben</item>
        <item>Mara</item>
    </string-array>

    <string-array name="tipo">
        <item>Perdido!</item>
        <item>Adopcion</item>
        <item>Perdido!</item>
        <item>Perdido!</item>
        <item>Adopción</item>
    </string-array>

    <string-array name="ubicacion">
        <item>Caldera</item>
        <item>Los Nogales</item>
        <item>Independencia</item>
        <item>Maipu</item>
        <item>Valparaíso</item>
    </string-array>
    <string-array name="especie">
        <item>Perro</item>
        <item>Perro</item>
        <item>Perro</item>
        <item>Perro</item>
        <item>Gato</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>