<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-8dp"
    android:background="@drawable/fondo3"
    android:onClick="crearCuenta"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/correoedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/loginactivityusuarioedittext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:ems="10"
            android:hint="@string/loginactivitypasswordedittext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/iniciar"
        style="@style/estiloboton"
        android:layout_width="238dp"
        android:layout_height="53dp"
        android:layout_marginTop="64dp"
        android:onClick="iniciarSesion"
        android:text="@string/loginactivitybtniniciarsesion"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/regresar"
        style="@style/estiloboton"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFEB3B"
        android:onClick="crearCuenta"
        android:text="@string/creracuenta"
        android:textColor="#000000"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciar" />

    <Button
        android:id="@+id/button"
        style="@style/estiloboton"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:backgroundTint="#00FFEB3B"
        android:onClick="restablecerPassword"
        android:shadowColor="#00713A3A"
        android:text="@string/mensajecontraseña"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/iniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

</androidx.constraintlayout.widget.ConstraintLayout>